Update for iPhone X and iOS 11

--- a/Everestmeter/Main.storyboard
+++ b/Everestmeter/Main.storyboard
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina5_5" orientation="portrait">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina5_9" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -14,22 +15,18 @@
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="AltitudeViewController" customModule="Everestmeter" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
-                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC" customClass="AltitudeView" customModule="Everestmeter" customModuleProvider="target">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="fKT-qW-niA">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="EverestTop.png" translatesAutoresizingMaskIntoConstraints="NO" id="jVC-2F-wb9">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="626"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="690.66666666666663"/>
                                     </imageView>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="EverestBottom.png" translatesAutoresizingMaskIntoConstraints="NO" id="EXi-pD-lle">
-                                        <rect key="frame" x="0.0" y="626" width="414" height="110"/>
+                                        <rect key="frame" x="0.0" y="690.66666666666652" width="375" height="121.33333333333337"/>
                                     </imageView>
                                 </subviews>
                                 <constraints>
@@ -37,17 +34,17 @@
                                 </constraints>
                             </stackView>
                             <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wn9-fA-djB" customClass="AltitudeDataView" customModule="Everestmeter" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="626"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="690.66666666666663"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aEZ-0a-m9a">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="10"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="10"/>
                                         <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="10" id="Kq9-Oa-tjV"/>
                                         </constraints>
                                     </view>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Altitude" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8a5-FM-HX6">
-                                        <rect key="frame" x="44" y="11" width="76" height="26.333333333333336"/>
+                                        <rect key="frame" x="44.000000000000007" y="11" width="67.666666666666686" height="24"/>
                                         <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
                                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
@@ -67,16 +64,16 @@
                                 </connections>
                             </view>
                             <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8dv-VB-tip" customClass="ErrorView" customModule="Everestmeter" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                                 <subviews>
                                     <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UtF-ea-0Kh">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="9wu-9k-bwQ">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Error Message" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3it-ba-JTI">
-                                                    <rect key="frame" x="136.66666666666669" y="355" width="141.00000000000006" height="26.333333333333314"/>
+                                                    <rect key="frame" x="125.00000000000001" y="394.66666666666669" width="125.33333333333336" height="24"/>
                                                     <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -103,19 +100,20 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="8dv-VB-tip" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="2zo-h3-cqF"/>
+                            <constraint firstItem="8dv-VB-tip" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="2zo-h3-cqF"/>
                             <constraint firstItem="wn9-fA-djB" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="3Mk-bn-Zvr"/>
                             <constraint firstItem="jVC-2F-wb9" firstAttribute="height" secondItem="wn9-fA-djB" secondAttribute="height" id="9Be-U7-Dzd"/>
-                            <constraint firstItem="fKT-qW-niA" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="9oI-pP-wJq"/>
+                            <constraint firstItem="fKT-qW-niA" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="9oI-pP-wJq"/>
                             <constraint firstAttribute="trailing" secondItem="fKT-qW-niA" secondAttribute="trailing" id="KnT-Rk-VNj"/>
                             <constraint firstItem="8dv-VB-tip" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Kwp-2o-JK5"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="fKT-qW-niA" secondAttribute="bottom" id="Qdq-ko-z7y"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="8dv-VB-tip" secondAttribute="bottom" id="U1v-Td-pPV"/>
+                            <constraint firstAttribute="bottom" secondItem="fKT-qW-niA" secondAttribute="bottom" id="Qdq-ko-z7y"/>
+                            <constraint firstAttribute="bottom" secondItem="8dv-VB-tip" secondAttribute="bottom" id="U1v-Td-pPV"/>
                             <constraint firstItem="wn9-fA-djB" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="YrN-e3-3V9"/>
                             <constraint firstAttribute="trailing" secondItem="8dv-VB-tip" secondAttribute="trailing" id="ZRI-Bf-zhR"/>
                             <constraint firstAttribute="trailing" secondItem="wn9-fA-djB" secondAttribute="trailing" id="b1b-dT-DJl"/>
                             <constraint firstItem="fKT-qW-niA" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="gVE-fy-h9e"/>
                         </constraints>
+                        <viewLayoutGuide key="safeArea" id="AZQ-ys-wRc"/>
                         <connections>
                             <outlet property="dataView" destination="wn9-fA-djB" id="hMV-c5-NMh"/>
                             <outlet property="errorView" destination="8dv-VB-tip" id="mHB-ie-Oyo"/>
