--- a/Everestmeter/Base.lproj/LaunchScreen.storyboard
+++ b/Everestmeter/Base.lproj/LaunchScreen.storyboard
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -14,10 +15,6 @@
         <scene sceneID="EHf-IW-A2E">
             <objects>
                 <viewController id="01J-lp-oVM" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="Llm-lL-Icb"/>
-                        <viewControllerLayoutGuide type="bottom" id="xb3-aO-Qok"/>
-                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -47,8 +44,9 @@
                             <constraint firstItem="RL0-Oj-wBq" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="7QX-lq-UgW"/>
                             <constraint firstAttribute="trailing" secondItem="RL0-Oj-wBq" secondAttribute="trailing" id="8xV-MI-HdZ"/>
                             <constraint firstItem="RL0-Oj-wBq" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="JaA-wv-BQv"/>
-                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="RL0-Oj-wBq" secondAttribute="bottom" id="ykA-0T-FrO"/>
+                            <constraint firstAttribute="bottom" secondItem="RL0-Oj-wBq" secondAttribute="bottom" id="ykA-0T-FrO"/>
                         </constraints>
+                        <viewLayoutGuide key="safeArea" id="yAs-U5-zZ3"/>
                     </view>
                     <nil key="simulatedStatusBarMetrics"/>
                 </viewController>
@@ -58,7 +56,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="EverestBottom.png" width="1800" height="478"/>
-        <image name="EverestTop.png" width="1800" height="2722"/>
+        <image name="EverestBottom.png" width="1800" height="485"/>
+        <image name="EverestTop.png" width="1800" height="2715"/>
     </resources>
 </document>
